[package]
name = "valheim-server-mods"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5", features = ["derive", "env"] }
serde = { version = "^1.0", features = ["derive"] }
reqwest = { version = "^0.12", features = ["json"] }
inquire = { version = "^0.7", features = ["macros"] }
clearscreen = { version = "^4.0" }
thunderstore = { version = "0.3.1" }
tokio = { version = "^1.45", features = ["full"] }
anyhow = { version = "^1.0" }
pad = { version = "^0.1" }
term_size = { version = "^0.3" }
