[package]
name = "thundermods"
version = "0.1.0"
edition = "2024"
authors = ["Devin Bidwell <dbidwell@biddydev.com>"]
license = "APACHE-2.0"
repository = "https://github.com/dbidwell94/thundermods"

[dependencies]
clap = { version = "^4.5", features = ["derive", "env"] }
serde = { version = "^1.0", features = ["derive"] }
inquire = { version = "^0.7", features = ["macros"] }
clearscreen = { version = "^4.0" }
thunderstore = { version = "0.3.1" }
tokio = { version = "^1.45", features = ["full"] }
anyhow = { version = "^1.0" }
pad = { version = "^0.1" }
term_size = { version = "^0.3" }
semver = { version = "^1.0" }
serde_json = { version = "^1.0" }
directories = { version = "^6.0" }
chrono = { version = "^0.4" }
bincode = { version = "^2.0", features = ["serde"] }
